ecommerce-saleor/01-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: saleor
spec:
  ClusterIP: None
  posts:
  - port: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: saleor
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
          - containerPort: 5432
          volumeMounts:
          - name: data
            mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
      storageClassName: nfs-subdir-external-provisioner
