ecommerce-saleor/02-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: saleor
spec:
  ClusterIP: None
  posts:
  - port: 6379
  selector:
    app: redis
---
apiVersion: v1
kind: StatefulSet
metadata:
  name: redis
  namespace: saleor
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.4
          ports:
          - containerPort: 6379
          volumeMounts:
          - name: data
            mountPath: /data
          args: ["--appendonly", "yes"]
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: nfs-subdir-external-provisioner
