ecommerce-saleor/03-saleor-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-api
  namespace: saleor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: saleor-api
  template:
    metadata:
      labels:
        app: saleor-api
    spec:
      containers:
      - name: saleor-api
        image: saleor/api:3.17
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: saleor-api
  namespace: saleor
spec:
  ports:
  - port: 8000
  selector:
    app: saleor-api
