ecommerce-saleor/04-saleor-dashboard.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-dashboard
  namespace: saleor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: saleor-dashboard
  template:
    metadata:
      labels:
        app: saleor-dashboard
    spec:
      containers:
      - name: saleor-dashboard
        image: saleor/dashboard:3.17
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: saleor-dashboard
  namespace: saleor
spec:
  ports:
  - port: 80
  selector:
    app: saleor-dashboard
