ecommerce-saleor/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saleor-ingress
  namespace: saleor
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: saleor.b.apps.containers-dev-lab.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: saleor-dashboard
            port:
              number: 80
